NEWS - OpenPrinting CUPS Filters v1.18.0 - 2017-12-19
-----------------------------------------------------

CHANGES IN V1.19.0

	- libcupsfilters: Let the PPD generator read out the maximum
	  of info about color spaces and this way not only reliably
	  the correct choices are added to the ColorModel option but
	  also the maximum supported bit depth (8 or 16 bit) is used.
	- libcupsfilters: Overtaken new features from CUPS' PPD
	  generator: Presets, Finishing Templates, and extraction of
	  media sizes from "media-col-database"
	- libcupsfilters: Improvements on header of generated PPDs:
	  use cups-filters version number, "drvless.ppd" PCFileName,
	  APSupplies and cupsChargeInfoURI from CUPS.
	- libcupsfilters: Let the PPD generator use the IPP string
	  tables in the translation files of CUPS 2.3.x or newer
	  (English strings only). Let all options in the PPD have
	  human-readable option and choice names. In case of CUPS
	  2.2.x or older (or if the CUPS translation are missing) we
	  fall back to internal tables.
	- cups-browsed: Improved debug output when checking IPP
	  attributes of IPP printers.
	- .gitignore: Ignore also core files.
	- cups-browsed: Support use of PPD files generated by CUPS for
	  IPP Printers. Works only if the the local queue created by
	  cups-browsed replaces a temporary queue from CUPS.
	  Configurable via "UseCUPSGeneratedPPDs" directive in
	  cups-browsed.conf.

CHANGES IN V1.18.0

	- braille: Add support for page-ranges option. Thanks to
          Samuel Thibault for this patch (Pull request #12).
	- braille: Fix supporting docx and LO file names with
          spaces. Thanks to Samuel Thibault for this patch (Pull
          request #11).
	- .gitignore: Updated and cleaned up.
	- Build system: Make sure that "make dist" always includes all
	  files of the repository, plus the files generated by
	  ./autogen.sh, independent of the system configuration and
	  the used ./configure options.